--- a/tasks/user.yml
+++ b/tasks/user.yml
@@ -1,6 +1,8 @@
 ---
 - name: create hbase group
   group: name=hbase system=yes
+  sudo: yes
 
 - name: Create hbase user
-  user: name=hbase group=hbase system=yes home={{hbase_install_dir}} createhome=yes
+  user: name=hbase group=hbase system=yes home={{hbase_install_dir}} createhome=yes shell=/bin/bash
+  sudo: yes
