--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,12 +1,14 @@
 ---
 - name: download HBase release {{ hbase_version }}
-  get_url: url='http://apache.vianett.no/hbase/hbase-{{ hbase_version }}/{{ hbase_archive }}' dest='/tmp/{{ hbase_archive }}'
+  get_url: url=http://apache.vianett.no/hbase/hbase-{{ hbase_version }}/{{ hbase_archive }} dest=/tmp/{{ hbase_archive }}
 
 - name: create HBase-related directories
-  file: path='{{ item }}' state=directory owner=hbase group=hbase
+  file: path={{ item }} state=directory owner=hbase group=hbase
   with_items:
-    - '{{ hbase_data_dir }}'
-    - '{{ hbase_install_dir }}/logs'
+    - "{{ hbase_data_dir }}"
+    - "{{ hbase_logs_dir }}"
+    - "{{ hbase_zookeeper_data_dir }}"
+    - /var/run/hbase
   sudo: yes
 
 - name: extract HBase archive
@@ -14,31 +16,22 @@
   sudo: yes
   register: extracted
 
-- name: write HBase config file
-  template: src=conf/hbase-site.xml.j2 dest='{{ hbase_install_dir }}/conf/hbase-site.xml' owner=hbase group=hbase  mode=0644
-  when: extracted.changed
-
-- name: Copy hbase-env
-  template: dest={{ hbase_install_dir }}/conf/hbase-env.sh src=conf/hbase-env.sh.j2 owner=hbase group=hbase mode=0644
+- name: write HBase config files
+  template: src=conf/{{ item }}.j2 dest={{ hbase_install_dir }}/conf/{{ item }} owner=hbase group=hbase mode=0644
+  with_items:
+    - hbase-site.xml
+    - hbase-env.sh
+  sudo: yes
   when: extracted.changed
 
 - name: Make sure permissions are correct 
-  file: path='{{ hbase_install_dir }}' state=directory owner=hbase group=hbase recurse=yes
-
-- name: Install hbase supervisor script
-  template: dest=/etc/supervisor/conf.d/hbase.conf src=supervisor/hbase.conf.j2 owner=root group=root mode=0644
-  notify: restart supervisor
-
-- name: Install hbase-thrift supervisor script
-  template: dest=/etc/supervisor/conf.d/hbase-thrift.conf src=supervisor/hbase-thrift.conf.j2 owner=root group=root mode=0644
-  notify: restart supervisor
-
-- name: start hbase
-  supervisorctl: name=hbase state=restarted
+  file: path={{ hbase_install_dir }} state=directory owner=hbase group=hbase recurse=yes
   sudo: yes
-  when: extracted.changed
 
-- name: start hbase-thrift
-  supervisorctl: name=hbase-thrift state=restarted
+- name: Install hbase supervisor scripts
+  template: dest=/etc/supervisor/conf.d/{{ item }} src=supervisor/{{item}}.j2 owner=root group=root mode=0644
+  with_items:
+    - hbase.conf
+    - hbase-thrift.conf
   sudo: yes
-  when: extracted.changed
+  notify: restart supervisor
