--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,6 +6,7 @@ hbase_zookeeper_data_dir: /var/opt/zookeeper
 hbase_zookeeper_client_port: 2181
 hbase_logs_dir: /var/log/hbase
 hbase_archive: hbase-{{hbase_version}}.tar.gz
-hbase_distributed: false
+hbase_bind_ip: "0.0.0.0"
+hbase_bind_interface: eth0
 hbase_zookeepers: 
-  - localhost
+  - "{{ansible_hostname}}"
